--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,42 +11,14 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/home}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/transfer}">Transfer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/profile}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/contact}">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/logout}">Log Out</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<br /><br />
+<div th:insert="header :: header"></div>
+
 <div class="container">
     <div class="row">
         <h1 class="text-center"> Registration and Login System </h1>
+    </div>
+    <div class="row">
+        <h2 class="text-center">Balance: <span th:text="${balance}">0.00</span></h2>
     </div>
 </div>
 </body>
