refactorisation du code

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -24,7 +24,7 @@
                             <a class="nav-link" th:href="@{/}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/transfer}">Transfer</a>
+                            <a class="nav-link" th:href="@{/transaction}">Transaction</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/profile}">Profile</a>
