--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,41 +5,24 @@
 <div th:fragment="header" class="row">
     <div class="col-12">
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/transaction}">Transaction</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/profile}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/connection}">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/bank}">Bank Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/logout}">Log Out</a>
-                        </li>
-                    </ul>
-                </div>
+		              <span class="navbar-brand h1"><span class="fw-bold" style="color: #77BF63">Pay My Buddy</span><br>
+		              <small th:text="${name} + ' (balance : ' + ${balance} + ' €)'" class="fw-normal"></small></span>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link"href="/"><i class="bi bi-house"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/bank"><i class="bi bi-piggy-bank"></i> Bank Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/connection"><i class="bi bi-people"></i> Connections</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout"><i class="bi bi-power"></i> Logout</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
