--- a/src/main/resources/templates/bank.html
+++ b/src/main/resources/templates/bank.html
@@ -35,11 +35,11 @@
                         <input type="text" class="form-control" id="iban" th:value="${account.iban}" readonly>
                         <div th:if="${#fields.hasErrors('iban')}" th:errors="*{iban}" class="invalid-feedback">
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex" style="margin-top:10px">
 
                             <form action="/bank/update-iban" method="post" th:object="${accountDto}">
                                 <input type="hidden" class="form-control" id="iban" th:field="*{iban}">
-                                <button style="background-color: #77BF63; border-color: #77BF63" type="submit"
+                                <button style="background-color: #77BF63; border-color: #77BF63; margin-right:10px" type="submit"
                                         class="btn btn-primary">Update IBAN
                                 </button>
                             </form>
@@ -91,6 +91,11 @@
                         <label for="name" class="form-label">Bank Name</label>
                         <input type="text" class="form-control" id="name" th:field="*{name}">
                         <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="invalid-feedback"></div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="balance" class="form-label">Balance</label>
+                        <input type="number" class="form-control" id="balance" th:field="*{balance}">
+                        <div th:if="${#fields.hasErrors('balance')}" th:errors="*{balance}" class="invalid-feedback"></div>
                     </div>
                     <div class="mb-3">
                         <label for="iban" class="form-label">IBAN<br><small class="fst-italic">Must have at least 14
