--- a/src/main/resources/templates/bank.html
+++ b/src/main/resources/templates/bank.html
@@ -23,7 +23,7 @@
     <div th:if="${account}">
         <div class="row mt-2">
             <div class="col-6">
-                <form action="/bank" method="post" th:object="${accountDto}" th:action="@{/bank}">
+                <form action="/bank/update" method="post" th:object="${accountDto}" th:action="@{/bank/update}">
                     <div class="mb-3">
                         <label for="name" class="form-label">Bank Name</label>
                         <input type="text" class="form-control" id="name" th:value="${account.name}" readonly>
@@ -32,17 +32,15 @@
                     <div class="mb-3">
                         <label for="iban" class="form-label">IBAN<br><small class="fst-italic">Must have at least 14
                             characters and maximum 34 </small></label>
-                        <input type="text" class="form-control" id="iban" th:value="${account.iban}" readonly>
+                        <input type="text" class="form-control" id="iban" th:field="*{iban}"
+                               th:classappend="${#fields.hasErrors('iban')} ? 'is-invalid'">
                         <div th:if="${#fields.hasErrors('iban')}" th:errors="*{iban}" class="invalid-feedback">
                         </div>
                         <div class="d-flex" style="margin-top:10px">
 
-                            <form action="/bank/update-iban" method="post" th:object="${accountDto}">
-                                <input type="hidden" class="form-control" id="iban" th:field="*{iban}">
                                 <button style="background-color: #77BF63; border-color: #77BF63; margin-right:10px" type="submit"
                                         class="btn btn-primary">Update IBAN
                                 </button>
-                            </form>
                             <form action="/bank/delete" method="post">
                                 <input type="hidden" name="accountId" th:value="${account.id}">
                                 <button type="submit" style="" class="btn btn-danger">Delete Account</button>
